fix: adding rate limit for continuous scraping

--- a/notebooks/launch_sagemaker.ipynb
+++ b/notebooks/launch_sagemaker.ipynb
@@ -13,9 +13,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/miniconda3/lib/python3.10/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"json\" in \"MonitoringDatasetFormat\" shadows an attribute in parent \"Base\"\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[12/28/24 07:13:19] </span><span style=\"color: #0069ff; text-decoration-color: #0069ff; font-weight: bold\">INFO    </span> Found credentials in shared credentials file: ~<span style=\"color: #e100e1; text-decoration-color: #e100e1\">/.aws/credentials</span>   <a href=\"file:///home/ubuntu/miniconda3/lib/python3.10/site-packages/botocore/credentials.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">credentials.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///home/ubuntu/miniconda3/lib/python3.10/site-packages/botocore/credentials.py#1278\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">1278</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[12/28/24 07:13:19]\u001b[0m\u001b[2;36m \u001b[0m\u001b[1;38;2;0;105;255mINFO    \u001b[0m Found credentials in shared credentials file: ~\u001b[38;2;225;0;225m/.aws/\u001b[0m\u001b[38;2;225;0;225mcredentials\u001b[0m   \u001b]8;id=66833;file:///home/ubuntu/miniconda3/lib/python3.10/site-packages/botocore/credentials.py\u001b\\\u001b[2mcredentials.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=969072;file:///home/ubuntu/miniconda3/lib/python3.10/site-packages/botocore/credentials.py#1278\u001b\\\u001b[2m1278\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.pytorch import PyTorch\n",
     "\n",
@@ -131,6 +161,89 @@
     "    local_dir='danbooru_downloads',\n",
     "    upload_dir='s3://dataset-ingested/danbooru'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def launch_danbooru_scrape_jobs(from_id: int, to_id: int, n_jobs: int, upload_dir: str):\n",
+    "    \"\"\"\n",
+    "    Launch multiple SageMaker jobs to distribute the scraping workload.\n",
+    "\n",
+    "    Args:\n",
+    "        from_id (int): Starting post ID for the scraper.\n",
+    "        to_id (int): Ending post ID for the scraper.\n",
+    "        n_jobs (int): Number of jobs to divide the workload.\n",
+    "        upload_dir (str): S3 bucket URI to upload the scraped data.\n",
+    "    \"\"\"\n",
+    "    # Calculate the range of IDs each job will handle\n",
+    "    total_posts = to_id - from_id + 1\n",
+    "    posts_per_job = math.ceil(total_posts / n_jobs)\n",
+    "\n",
+    "    for i in range(n_jobs):\n",
+    "        start_id = from_id + i * posts_per_job\n",
+    "        end_id = min(start_id + posts_per_job - 1, to_id)\n",
+    "\n",
+    "        local_dir = f'danbooru_downloads_job_{i + 1}'\n",
+    "\n",
+    "        print(f\"Launching job for IDs {start_id} to {end_id}\")\n",
+    "        launch_scraper_job(start_id, end_id, local_dir, upload_dir)\n",
+    "\n",
+    "FROM_ID = 0\n",
+    "TO_ID = 8627626\n",
+    "N_JOBS = 80\n",
+    "UPLOAD_DIR = 's3://unidataset-danbooru/metadata/20241228_rescrape_full/'\n",
+    "launch_danbooru_scrape_jobs(FROM_ID, TO_ID, N_JOBS, UPLOAD_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping job: scraper-job-8519834-8627626\n",
+      "Stopping job: scraper-job-8411988-8519833\n",
+      "Stopping job: scraper-job-8304142-8411987\n",
+      "Stopping job: scraper-job-8196296-8304141\n",
+      "Stopping job: scraper-job-8088450-8196295\n",
+      "Stopping job: scraper-job-7980604-8088449\n",
+      "Stopping job: scraper-job-7872758-7980603\n",
+      "Stopping job: scraper-job-7764912-7872757\n",
+      "Stopping job: scraper-job-7657066-7764911\n",
+      "Stopping job: scraper-job-7549220-7657065\n"
+     ]
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "def terminate_scraper_jobs(name_contains: str = \"scraper-job\"):\n",
+    "    \"\"\"\n",
+    "    Terminates all SageMaker training jobs with names starting with 'scraper-job'.\n",
+    "    \"\"\"\n",
+    "    sagemaker_client = boto3.client('sagemaker')\n",
+    "\n",
+    "    # List all training jobs\n",
+    "    response = sagemaker_client.list_training_jobs(\n",
+    "        NameContains=name_contains,\n",
+    "        StatusEquals=\"InProgress\",\n",
+    "    )\n",
+    "\n",
+    "    training_jobs = response.get(\"TrainingJobSummaries\", [])\n",
+    "\n",
+    "    for job in training_jobs:\n",
+    "        job_name = job[\"TrainingJobName\"]\n",
+    "        print(f\"Stopping job: {job_name}\")\n",
+    "        sagemaker_client.stop_training_job(TrainingJobName=job_name)\n",
+    "\n",
+    "terminate_scraper_jobs()"
    ]
   }
  ],
